# pyproject.toml-template

./: .coveragerc  .pre-commit-config.yaml  .pydocstyle  README.md  index.html  mypackage.html  nose2.cfg  pyproject.toml  search.js  setup.cfg
.github/: python-requirements_docs.txt
.github/workflows/: docs.yml  pre-commit.yml  release.yml  test.yml
mypackage/: analyze.html  data.html  utils.html
mypackage/utils/: math.html
src/mypackage/: analyze.py
src/mypackage/data/: __init__.py  example_data1.txt
src/mypackage/utils/: math.py
tests/: test_analyize.py
tests/utils/: test_math.py
