[metadata]
name = mypackage
version = attr: mypackage.__version__
url = https://github.com/djwooten
author = David Wooten
author_email = dwooten@popos
maintainer = David Wooten
maintainer_email = dwooten@popos
description = A package to manipulate data
long_description = file: README.rst, CHANGLELOG.rst, LICENSE.rst
keywords = parse, text
license = All Rights Reserved
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    numpy>=1.0.0

[options.package_data]
mypackage = data/*.csv, *.rst

[options.entry_points]
console_scripts =
    parse-pkg-text = mypackage:main

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where = src
exclude =
    examples*
    tools*
    docs*
    mypackage.tests


